tests/snapshots/examples_fixtures/aoc__2025__aoc_day9_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day9_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day9_haskell_style.flx:44:38
   |
44 |         parse_points(lines, idx + 1, push(acc, (int_at(nums, 0), int_at(nums, 1))))
   |                                      ^^^^

Hint:
  Define it first: let push = ...;
== stdout ==
<not executed>
